src/layouts/MainHeader/MainHeader.css
/* Big cover image on the home page */
.main-header {
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    position: relative;
    display: table;
    width: 100%;
    height: 100vh;
    margin-bottom: 5rem;
    text-align: center;
    background: #222 no-repeat center center;
    background-size: cover;
    overflow: hidden;
}

.outer-layer {
    /*background: rgba(0, 0, 0, 0.7); */
    width: 75%;
    color: white;
    text-shadow:
    -2px -2px 0 #000,
    2px -2px 0 #000,
    -2px 2px 0 #000,
    2px 2px 0 #000;  
    -webkit-font-smoothing: antialiased; /*Smooths outline of text to look better*/
    margin: auto auto;
    padding: 4em 0;
}

.inner-layer {
    /*background: rgba(0, 0, 0, 0.9); */
    width: 90%;
    margin: auto auto; 
    height: 80%;
    padding: 4em 0;
}

.layer {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.main-header .inner {
    max-width: 80%;
}

@media screen and (min-width: 850px) {
    .row {
        display: -webkit-flex;
        display: -ms-flexbox;
        display: flex;
    }

    .col {
        margin-top: auto;
        margin-bottom: auto;
    }

    .left {
        flex: 55%;
    }

    .right {
        flex: 35%;
    }
}

@media screen and (max-width: 850px) {
    .main-header .inner {
        max-width: 100%;
    }

    .col {
        padding-bottom: 10%;
    }

    .outer-layer {
        background-color: transparent;

        width: 100%;
        padding: 0 0;
        padding-bottom: 1em;
    }

    .inner-layer {
        background-color: transparent;
        width: 100%;
        padding: 0 0;
    }

    .page-title {
        font-size: 10px;
    }
}
    
/* Put a semi-opaque radial gradient behind the icon to make it more visible
   on photos which happen to have a light background. */
.home-template .main-header::after {
    display: block;
    content: " ";
    width: 150px;
    height: 130px;
    border-radius: 100%;
    position: absolute;
    bottom: 0;
    left: 50%;
    margin-left: -75px;
    background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 0) 100%);
}

/* Hide when there's no cover image or on page2+ */
.no-cover.main-header::after,
.paged .main-header::after {
    display: none;
}

.no-cover.main-header {
    min-height: 15vh;
    max-height: 15vh;
    background: #f5f8fa;
}

.post-head.main-header {
    height: 65vh;
    min-height: 180px;
}

.no-cover.post-head.main-header {
    height: 85px;
    min-height: 0;
    margin-bottom: 0;
    background: transparent;
}

.tag-head.main-header {
    height: 40vh;
    min-height: 180px;
}

.author-head.main-header {
    height: 40vh;
    min-height: 180px;
}

.no-cover.author-head.main-header {
    height: 10vh;
    min-height: 100px;
    background: transparent;
}

/* On page2+ make all the headers smaller */
.paged .main-header {
    max-height: 30vh;
}

/* Create a bouncing scroll-down arrow on homepage with cover image */
.scroll-down {
    display: block;
    position: absolute;
    z-index: 100;
    bottom: 45px;
    left: 50%;
    margin-left: -16px;
    width: 34px;
    height: 34px;
    font-size: 34px;
    text-align: center;
    text-decoration: none;
    color: rgba(0, 0, 0, 0.4);
    -webkit-transform: rotate(-90deg);
    -ms-transform: rotate(-90deg);
    transform: rotate(-90deg);
    -webkit-animation: bounce 4s 2s infinite;
    animation: bounce 4s 2s infinite;
}

/* Stop it bouncing and increase contrast when hovered */
.scroll-down:hover {
    color: #fff;
    -webkit-animation: none;
    animation: none;
}

/* Hide when there's no cover image or on page2+ */
.no-cover .scroll-down,
.paged .scroll-down {
    display: none;
}

.icon-arrow-left::before {
    content: "\f605";
}


/* ==========================================================================
       Media Queries - Smaller than 900px
   ========================================================================== */

@media only screen and (max-width: 900px) {
    .main-header {
        -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
        box-sizing: border-box;

        /* height: auto; Node: duplicate height values included in original Casper css */
        padding: 15% 0;
    }

    .home-template .main-header::after { display: none; }

    .paged .main-header {
        min-height: 180px;
        padding: 10% 0;
    }

    .post-head.main-header {
        height: 45vh;
    }

    .tag-head.main-header,
    .author-head.main-header {
        height: 30vh;
    }

    .no-cover.post-head.main-header {
        height: 55px;
        padding: 0;
    }

    .no-cover.author-head.main-header {
        padding: 0;
    }

    .scroll-down { display: none; }
}

/* ==========================================================================
       Media Queries - Smaller than 500px
   ========================================================================== */

@media only screen and (max-width: 500px) {
    .main-header {
        margin-bottom: 15px;
        height: 40vh;
    }

    .row {
        padding-bottom: 25px;
    }

    .layer {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 240px;
        margin-bottom: 0;
        padding-bottom: 0;
        padding-top: 30px;
    }

    .no-cover.main-header {
        height: 30vh;
    }

    .paged .main-header {
        max-height: 20vh;
        min-height: 160px;
        padding: 10% 0;
    }

    .post-head.main-header {
        height: 30vh;
    }

    .tag-head.main-header,
    .author-head.main-header {
        height: 20vh;
    }
}

/* ==========================================================================
       Animations
   ========================================================================== */

/* Used to bounce .scroll-down on home page */
@-webkit-keyframes bounce {
    0%,
    10%,
    25%,
    40%,
    50% {
        -webkit-transform: translateY(0) rotate(-90deg);
        transform: translateY(0) rotate(-90deg);
    }

    20% {
        -webkit-transform: translateY(-10px) rotate(-90deg);
        transform: translateY(-10px) rotate(-90deg);
    }

    30% {
        -webkit-transform: translateY(-5px) rotate(-90deg);
        transform: translateY(-5px) rotate(-90deg);
    }
}

@keyframes bounce {
    0%,
    10%,
    25%,
    40%,
    50% {
        -webkit-transform: translateY(0) rotate(-90deg);
        transform: translateY(0) rotate(-90deg);
    }

    20% {
        -webkit-transform: translateY(-10px) rotate(-90deg);
        transform: translateY(-10px) rotate(-90deg);
    }

    30% {
        -webkit-transform: translateY(-5px) rotate(-90deg);
        transform: translateY(-5px) rotate(-90deg);
    }
}

